--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
 <div class="container-fluid">
 
   <%= render 'layouts/carousel' %>
-  <%= render 'layouts/big_callout' %>
+  <%= render 'layouts/more_info' %>
   <%= render 'layouts/features_heading' %>
   <%= render 'layouts/features' %>
+  <%= render 'layouts/big_callout' %>
 
 </div>
-
-
